chore: update author email

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Daan Dekker",
-            "email": "daandekker96@gmail.com"
+            "email": "daan.dkkr@gmail.com"
         }
     ],
     "require": {
